# receipt-statement-linker

./: .gitignore  README.md  pyproject.toml
example/: example.json
src/receipt-statement-linker/: main.py  receipt.py
src/receipt_statement_linker/: categories.py  categorize.py  classification.py  config.py  extract.py  main.py  pair.py  receipt.py  statement.py
