[project]
name = "receipt-statement-linker"
version = "0.2.0"
description = "Link receipts to bank statement transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.66.0",
    "typer>=0.15.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
receipt-statement-linker = "receipt_statement_linker.main:main"
